--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
       border: none !important;
     }
 
-    /* 彻底隐藏歌词区域及那个多余的歌词按钮 */
-    .aplayer .aplayer-lrc,
-    .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon-lrc {
+    /* ✨ 强力 CSS 屏蔽歌词组件 */
+    .aplayer .aplayer-lrc, 
+    .aplayer .aplayer-icon-lrc,
+    .aplayer-icon-lrc {
         display: none !important;
+        visibility: hidden !important;
+        width: 0 !important;
+        height: 0 !important;
     }
 
-    /* 🌟 保持并优化控制按钮对齐 */
+    /* 2️⃣ 控制按钮排版对齐 */
     .aplayer .aplayer-info .aplayer-controller .aplayer-time {
         display: flex !important;
         align-items: center !important;
@@ -43,17 +47,12 @@
         height: 18px !important;
         margin-left: 5px !important;
         opacity: 0.7 !important;
-        transition: all 0.2s ease;
     }
-    .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon:hover {
-        opacity: 1 !important;
-    }
-    /* 修正图标颜色 */
     .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon path {
         fill: #444 !important;
     }
 
-    /* 2️⃣ 列表容器：精准 3 首歌高度 (26px * 3 = 78px) */
+    /* 3️⃣ 列表容器：精准 3 首歌高度 (26px * 3 = 78px) */
     .aplayer .aplayer-list {
       max-height: 78px !important;
       overflow: hidden !important;
@@ -68,11 +67,7 @@
       scrollbar-width: none !important;
     }
 
-    .aplayer .aplayer-list ol::-webkit-scrollbar {
-      display: none !important;
-    }
-
-    /* 3️⃣ 列表行样式 (严格 26px) */
+    /* 4️⃣ 列表行样式 (严格 26px) */
     .aplayer .aplayer-list ol li {
       box-sizing: border-box !important;
       background-image: none !important;
@@ -82,19 +77,15 @@
       font-size: 12px !important;
       display: flex !important; 
       align-items: center !important;
-      position: relative;
     }
 
-    /* 4️⃣ 颜色完全统一：全员 #333 */
     .aplayer .aplayer-list ol li .aplayer-list-index {
       color: #999;
       margin-right: 12px;
-      flex-shrink: 0;
     }
 
     .aplayer .aplayer-list ol li .aplayer-list-title {
       color: #333 !important; 
-      font-weight: 400 !important;
       flex-grow: 1; 
       white-space: nowrap;
       overflow: hidden;
@@ -103,9 +94,6 @@
 
     .aplayer .aplayer-list ol li .aplayer-list-author {
       color: #333 !important; 
-      font-size: 12px !important;
-      flex-shrink: 0;
-      text-align: right;
       margin-left: 10px;
     }
 
@@ -114,10 +102,6 @@
     }
 
     /* 5️⃣ 小竖条 */
-    .aplayer .aplayer-list ol li .aplayer-list-cur {
-      display: none !important; 
-    }
-
     .aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
       display: block !important; 
       position: absolute;
@@ -149,14 +133,11 @@
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
       listFolded: true, 
-      storageName: 'ap-storage-v2026-' + Math.random(), 
+      storageName: 'ap-storage-fixed-' + Math.random(), 
       listMaxHeight: '78px', 
       audio: audioList,
       theme: '#e9e9e9'
     });
-
-    ap.list.hide();
-    document.getElementById('aplayer').classList.remove('aplayer-withlist');
 
     const colorThief = new ColorThief();
     let themeTimer = null;
@@ -202,12 +183,19 @@
       updateThemeSafe();
     });
 
+    // ✨ 物理删除逻辑：加载完成后强制从网页代码里剔除歌词图标
     window.addEventListener('load', () => {
       setTimeout(() => {
+          // 关闭列表
           ap.list.hide();
           document.getElementById('aplayer').classList.remove('aplayer-withlist');
-      }, 100);
-      setTimeout(updateThemeSafe, 300);
+          
+          // 彻底删除歌词图标元素
+          const lrcBtn = document.querySelector('.aplayer-icon-lrc');
+          if (lrcBtn) lrcBtn.remove();
+          
+          updateThemeSafe();
+      }, 150);
     });
   </script>
 </body>
