--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
   <script>
     const audioList = [
-      { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.m4a', cover: 'cover/何真真 - Her Silence.jpg' },
-      { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.m4a', cover: 'cover/Dido - Hurricanes.jpg' },
+      { name: 'Her Silence', artist: '何真真', url: encodeURI('music/何真真 - Her Silence.m4a'), cover: encodeURI('cover/何真真 - Her Silence.jpg') },
+      { name: 'Hurricanes', artist: 'Dido', url: encodeURI('music/Dido - Hurricanes.m4a'), cover: encodeURI('cover/Dido - Hurricanes.jpg') },
       { name: '温柔的黎明', artist: '南里侑香', url: encodeURI('music/南里侑香 - 温柔的黎明.m4a'), cover: encodeURI('cover/南里侑香 - 温柔的黎明.jpg') },
     ];
 
